# CamTagNavigator

./: .gitignore  CMakeLists.txt  README.md  camcalib.py  camtagconfig.xml  marker.txt
example/: 00_room.txt
src/: UDPSender.h  camtagnav.cpp  camtagnav.h  cv2eigen.h  main.cpp
src/apriltags/: Edge.cc  Edge.h  Ellip.h  GrayModel.cc  Homography33.cc  MathUtil.h  Quad.cc  TagDetection.cc  TagDetection.h  TagDetector.cc  TagDetector.h  TagFamily.cc
tools/: april_calib.py  board_calib.py  quadcopter.stl  render_stl.py  udp3dview.py  udpserver.py
